--- a/evaluacion_final_modulo_1_Laura_Romero.ipynb
+++ b/evaluacion_final_modulo_1_Laura_Romero.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,14 +78,14 @@
     "        suma = 0 # generamos una variable neutra suma que será la que iremos incrementando en cada iteración\n",
     "        for producto in self.inventario: #iteramos inventario\n",
     "            valor_producto = producto[\"cantidad\"] * producto[\"precio\"] # creamos variable valor_producto: que es precio * la cantidad\n",
-    "            print(valor_producto) # Imprimo el valor asociado a cada producto\n",
+    "            print(f\"El valor asociado {producto['nombre']} es {valor_producto}\") # Imprimo el valor asociado a cada producto\n",
     "            suma += valor_producto \n",
     "            # en cada vuelta del bucle sumamos el valor de cada producto con el producto siguiente, y así sucesivamente hasta que termine el bucle\n",
     "        print(f\"El valor de nuestro inventario actual es {suma} euros\") # Imprimimos mensaje mostrando el valor total\n",
     "    \n",
     "    def realizar_compra(self):\n",
     "        \n",
-    "        carrito = {} # generamos una lista vacia para poder ir metiendo los productos que seleccione el cliente\n",
+    "        carrito = {} # generamos un diccionario vacio para poder ir metiendo los productos que seleccione el cliente\n",
     "        coste= 0 # genero una variable neutra para ir guardando el coste total\n",
     "        while True: # genero un bucle while para que el cliente pueda ir realizando las compras que quiera, hasta que se de la condicion para que finalice el bucle\n",
     "            existe_inventario = False\n",
@@ -122,7 +122,7 @@
     "                    else:\n",
     "                        carrito.update({seleccion_producto:{\"cantidad\": cantidad_producto, \"coste\": coste_actual}})\n",
     "                        # solo se aplica si el producto no se encuentra, lo añade al carrito                                       \n",
-    "        if existe_inventario == False: # si no encuentra el producto en el inventario entonces se imprime mensaje notificandolo\n",
+    "            if existe_inventario == False: # si no encuentra el producto en el inventario entonces se imprime mensaje notificandolo\n",
     "                print(\"lo siento, producto no encontrado, intentalo de nuevo\")        \n",
     "        \n",
     "        print(f\"tu carrito actual es {carrito}\") # imprimimos carrito actual\n",
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -342,8 +342,8 @@
       "Nombre : blusa\n",
       "Precio : 10\n",
       "Cantidad : 50\n",
-      "4300\n",
-      "500\n",
+      "El valor asociado camisa es 4300\n",
+      "El valor asociado blusa es 500\n",
       "El valor de nuestro inventario actual es 4800 euros\n"
      ]
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -365,28 +365,17 @@
      "output_type": "stream",
      "text": [
       "Has seleccionado : camisa\n",
-      "Has seleccionado 2 unidades\n",
-      "coste actual del producto:  50\n",
-      "coste acumulado total:  50\n",
+      "Has seleccionado 3 unidades\n",
+      "coste actual del producto:  75\n",
+      "coste acumulado total:  75\n",
       "Has seleccionado : blusa\n",
       "Has seleccionado 5 unidades\n",
       "coste actual del producto:  50\n",
-      "coste acumulado total:  100\n",
-      "Has seleccionado : pantalon\n",
-      "Has seleccionado : 4\n",
-      "Has seleccionado : camisa\n",
-      "Has seleccionado 25 unidades\n",
-      "coste actual del producto:  625\n",
-      "coste acumulado total:  725\n",
-      "ya existe elproducto en el carrito\n",
-      "Has seleccionado : blusa\n",
-      "Has seleccionado 360 unidades\n",
-      "lo siento, no tenemos stock suficiente\n",
+      "coste acumulado total:  125\n",
       "Has seleccionado : fin\n",
-      "lo siento, producto no encontrado, intentalo de nuevo\n",
-      "tu carrito actual es {'camisa': {'cantidad': 27, 'coste': 675}, 'blusa': {'cantidad': 5, 'coste': 50}}\n",
-      "El coste total de tu compra asciende a 725 euros\n",
-      "Pago realizado correctamente, tu cambio es 1175.0 euros\n"
+      "tu carrito actual es {'camisa': {'cantidad': 3, 'coste': 75}, 'blusa': {'cantidad': 5, 'coste': 50}}\n",
+      "El coste total de tu compra asciende a 125 euros\n",
+      "Pago realizado correctamente, tu cambio es 25.0 euros\n"
      ]
     }
    ],
@@ -399,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +412,7 @@
        " 'Marina Jimenez': {'e-mail': 'marinoky@outlook.es'}}"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -460,16 +449,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Laura Romero': {'e-mail': 'lromerovet@gmail.com', 'compra': {'camisa': {'cantidad': 27, 'coste': 675}, 'blusa': {'cantidad': 5, 'coste': 50}}}, 'Elena Perez': {'e-mail': 'elena1489_68sklhj@hotmail.com'}, 'Marina Jimenez': {'e-mail': 'marinoky@outlook.es'}}\n",
+      "{'Laura Romero': {'e-mail': 'lromerovet@gmail.com', 'compra': {'camisa': {'cantidad': 3, 'coste': 75}, 'blusa': {'cantidad': 5, 'coste': 50}}}, 'Elena Perez': {'e-mail': 'elena1489_68sklhj@hotmail.com'}, 'Marina Jimenez': {'e-mail': 'marinoky@outlook.es'}}\n",
       "-------------------------------------------------------------------------------------------\n",
-      "{'Laura Romero': {'e-mail': 'lromerovet@gmail.com', 'compra': {'camisa': {'cantidad': 27, 'coste': 675}, 'blusa': {'cantidad': 5, 'coste': 50}}}, 'Elena Perez': {'e-mail': 'elena1489_68sklhj@hotmail.com', 'compra': {'camisa': {'cantidad': 2, 'coste': 40}, 'blusa': {'cantidad': 3, 'coste': 15}}}, 'Marina Jimenez': {'e-mail': 'marinoky@outlook.es'}}\n"
+      "{'Laura Romero': {'e-mail': 'lromerovet@gmail.com', 'compra': {'camisa': {'cantidad': 3, 'coste': 75}, 'blusa': {'cantidad': 5, 'coste': 50}}}, 'Elena Perez': {'e-mail': 'elena1489_68sklhj@hotmail.com', 'compra': {'camisa': {'cantidad': 2, 'coste': 40}, 'blusa': {'cantidad': 3, 'coste': 15}}}, 'Marina Jimenez': {'e-mail': 'marinoky@outlook.es'}}\n"
      ]
     }
    ],
@@ -483,14 +472,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Las compras realizadas por nuestro cliente Laura Romero son {'camisa': {'cantidad': 27, 'coste': 675}, 'blusa': {'cantidad': 5, 'coste': 50}}\n",
+      "Las compras realizadas por nuestro cliente Laura Romero son {'camisa': {'cantidad': 3, 'coste': 75}, 'blusa': {'cantidad': 5, 'coste': 50}}\n",
       "Las compras realizadas por nuestro cliente Elena Perez son {'camisa': {'cantidad': 2, 'coste': 40}, 'blusa': {'cantidad': 3, 'coste': 15}}\n",
       "cliente Marina Jimenez no tiene compras\n",
       "cliente no encontrado\n"
@@ -509,20 +498,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Las compras realizadas por nuestro cliente Laura Romero son {'camisa': {'cantidad': 27, 'coste': 675}, 'blusa': {'cantidad': 5, 'coste': 50}}\n",
-      "{'camisa': {'cantidad': 27, 'coste': 675}, 'blusa': {'cantidad': 5, 'coste': 50}}\n",
+      "Las compras realizadas por nuestro cliente Laura Romero son {'camisa': {'cantidad': 3, 'coste': 75}, 'blusa': {'cantidad': 5, 'coste': 50}}\n",
+      "{'camisa': {'cantidad': 3, 'coste': 75}, 'blusa': {'cantidad': 5, 'coste': 50}}\n",
       "Las compras realizadas por nuestro cliente Elena Perez son {'camisa': {'cantidad': 2, 'coste': 40}, 'blusa': {'cantidad': 3, 'coste': 15}}\n",
       "{'camisa': {'cantidad': 2, 'coste': 40}, 'blusa': {'cantidad': 3, 'coste': 15}}\n",
       "cliente Marina Jimenez no tiene compras\n",
       "{}\n",
-      "El total de ventas de la empresa ha sido de 780.0\n"
+      "El total de ventas de la empresa ha sido de 180.0\n"
      ]
     }
    ],
